--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
                                 <div class="burger-menu__header">
                                     <button id="burger-menu-close" class="burger-menu__trigger burger-menu__close">
                                         <svg class="burger-menu-close-icon">
-                                            <use xlink:href="../../assets/images/icons.svg#burger-menu-close-icon"></use>
+                                            <use xlink:href="./assets/images/icons.svg#burger-menu-close-icon"></use>
                                         </svg>
                                     </button>
                                     <div class="burger-menu__logo">
-                                        <a href="../../index.html">
+                                        <a href="index.html">
                                             <svg class="template-header__icon logo">
                                                 <use xlink:href="./assets/images/icons.svg#logo"></use>
                                             </svg>
@@ -100,7 +100,7 @@
                                 <input data-id="theme-changer" type="checkbox"
                                        class="toggle__input">
                                 <svg class="theme-changer__day day-icon">
-                                    <use xlink:href="../../assets/images/icons.svg#day-icon"></use>
+                                    <use xlink:href="./assets/images/icons.svg#day-icon"></use>
                                 </svg>
                                 <div class="toggle__state">
                                     <div class="toggle__control">
@@ -108,7 +108,7 @@
                                     </div>
                                 </div>
                                 <svg class="theme-changer__night night-icon">
-                                    <use xlink:href="../../assets/images/icons.svg#night-icon"></use>
+                                    <use xlink:href="./assets/images/icons.svg#night-icon"></use>
                                 </svg>
                             </label>
                         </div>
@@ -282,7 +282,7 @@
                                                 <div class="checkbox__state">
                                                     <div class="checkbox__control">
                                                         <svg class="checkbox__icon">
-                                                            <use xlink:href="../../assets/images/icons.svg#checkbox-icon"></use>
+                                                            <use xlink:href="./assets/images/icons.svg#checkbox-icon"></use>
                                                         </svg>
                                                     </div>
                                                     <div class="checkbox__label checkbox__label_preview">
@@ -295,7 +295,7 @@
                                                 <div class="checkbox__state">
                                                     <div class="checkbox__control">
                                                         <svg class="checkbox__icon">
-                                                            <use xlink:href="../../assets/images/icons.svg#checkbox-icon"></use>
+                                                            <use xlink:href="./assets/images/icons.svg#checkbox-icon"></use>
                                                         </svg>
                                                     </div>
                                                     <div class="checkbox__label checkbox__label_preview">
@@ -308,7 +308,7 @@
                                                 <div class="checkbox__state">
                                                     <div class="checkbox__control">
                                                         <svg class="checkbox__icon">
-                                                            <use xlink:href="../../assets/images/icons.svg#checkbox-icon"></use>
+                                                            <use xlink:href="./assets/images/icons.svg#checkbox-icon"></use>
                                                         </svg>
                                                     </div>
                                                     <div class="checkbox__label checkbox__label_preview">
@@ -323,7 +323,7 @@
                                                 <div class="radio__state">
                                                     <div class="radio__control">
                                                         <svg class="radio__icon">
-                                                            <use xlink:href="../../assets/images/icons.svg#radio-icon"></use>
+                                                            <use xlink:href="./assets/images/icons.svg#radio-icon"></use>
                                                         </svg>
                                                     </div>
                                                     <div class="radio__label radio__label_preview">
@@ -336,7 +336,7 @@
                                                 <div class="radio__state">
                                                     <div class="radio__control">
                                                         <svg class="radio__icon">
-                                                            <use xlink:href="../../assets/images/icons.svg#radio-icon"></use>
+                                                            <use xlink:href="./assets/images/icons.svg#radio-icon"></use>
                                                         </svg>
                                                     </div>
                                                     <div class="radio__label radio__label_preview">
@@ -349,7 +349,7 @@
                                                 <div class="radio__state">
                                                     <div class="radio__control">
                                                         <svg class="radio__icon">
-                                                            <use xlink:href="../../assets/images/icons.svg#radio-icon"></use>
+                                                            <use xlink:href="./assets/images/icons.svg#radio-icon"></use>
                                                         </svg>
                                                     </div>
                                                     <div class="radio__label radio__label_preview">
@@ -672,7 +672,7 @@
                                                 <div class="checkbox__state">
                                                     <div class="checkbox__control">
                                                         <svg class="checkbox__icon">
-                                                            <use xlink:href="../../assets/images/icons.svg#checkbox-icon"></use>
+                                                            <use xlink:href="./assets/images/icons.svg#checkbox-icon"></use>
                                                         </svg>
                                                     </div>
                                                     <div class="checkbox__label checkbox__label_preview">
@@ -685,7 +685,7 @@
                                                 <div class="checkbox__state">
                                                     <div class="checkbox__control">
                                                         <svg class="checkbox__icon">
-                                                            <use xlink:href="../../assets/images/icons.svg#checkbox-icon"></use>
+                                                            <use xlink:href="./assets/images/icons.svg#checkbox-icon"></use>
                                                         </svg>
                                                     </div>
                                                     <div class="checkbox__label checkbox__label_preview">
@@ -698,7 +698,7 @@
                                                 <div class="checkbox__state">
                                                     <div class="checkbox__control">
                                                         <svg class="checkbox__icon">
-                                                            <use xlink:href="../../assets/images/icons.svg#checkbox-icon"></use>
+                                                            <use xlink:href="./assets/images/icons.svg#checkbox-icon"></use>
                                                         </svg>
                                                     </div>
                                                     <div class="checkbox__label checkbox__label_preview">
@@ -713,7 +713,7 @@
                                                 <div class="radio__state">
                                                     <div class="radio__control">
                                                         <svg class="radio__icon">
-                                                            <use xlink:href="../../assets/images/icons.svg#radio-icon"></use>
+                                                            <use xlink:href="./assets/images/icons.svg#radio-icon"></use>
                                                         </svg>
                                                     </div>
                                                     <div class="radio__label radio__label_preview">
@@ -726,7 +726,7 @@
                                                 <div class="radio__state">
                                                     <div class="radio__control">
                                                         <svg class="radio__icon">
-                                                            <use xlink:href="../../assets/images/icons.svg#radio-icon"></use>
+                                                            <use xlink:href="./assets/images/icons.svg#radio-icon"></use>
                                                         </svg>
                                                     </div>
                                                     <div class="radio__label radio__label_preview">
@@ -739,7 +739,7 @@
                                                 <div class="radio__state">
                                                     <div class="radio__control">
                                                         <svg class="radio__icon">
-                                                            <use xlink:href="../../assets/images/icons.svg#radio-icon"></use>
+                                                            <use xlink:href="./assets/images/icons.svg#radio-icon"></use>
                                                         </svg>
                                                     </div>
                                                     <div class="radio__label radio__label_preview">
