--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                                                             <use xlink:href="./assets/images/icons.svg#radio-icon"></use>
                                                         </svg>
                                                     </div>
-                                                    <div class="radio__label radio__label_preview">
+                                                    <div class="radio__label">
                                                         Default
                                                     </div>
                                                 </div>
@@ -339,7 +339,7 @@
                                                             <use xlink:href="./assets/images/icons.svg#radio-icon"></use>
                                                         </svg>
                                                     </div>
-                                                    <div class="radio__label radio__label_preview">
+                                                    <div class="radio__label">
                                                         Selected
                                                     </div>
                                                 </div>
@@ -352,7 +352,7 @@
                                                             <use xlink:href="./assets/images/icons.svg#radio-icon"></use>
                                                         </svg>
                                                     </div>
-                                                    <div class="radio__label radio__label_preview">
+                                                    <div class="radio__label">
                                                         Disabled
                                                     </div>
                                                 </div>
