--- a/pages/tooltip/tooltip.html
+++ b/pages/tooltip/tooltip.html
@@ -124,7 +124,7 @@
                             <div class="tooltip template-component__tooltip">
                                 <div class="tooltip__trigger">
                                     <svg class="question-icon">
-                                        <use xlink:href="/assets/images/icons.svg#question-icon"></use>
+                                        <use xlink:href="../../assets/images/icons.svg#question-icon"></use>
                                     </svg>
                                 </div>
                                 <div class="tooltip__text">Helper text</div>
